--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,104 @@
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.5.0
+appnope==0.1.4
+asttokens==2.4.1
+attrs==24.2.0
+blinker==1.8.2
+Bootstrap-Flask==2.2.0
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
+comm==0.2.2
+contourpy==1.3.0
+cycler==0.12.1
+debugpy==1.8.5
+decorator==5.1.1
+distro==1.9.0
+et-xmlfile==1.1.0
+executing==2.1.0
 Flask==2.3.2
-requests==2.31.0
+Flask-CKEditor==0.4.6
+Flask-Gravatar==0.5.0
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+fonttools==4.53.1
+frozenlist==1.4.1
+google-api-core==2.20.0
+google-api-python-client==2.149.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+google-cloud-vision==3.7.4
+googleapis-common-protos==1.65.0
+grpcio==1.66.2
+grpcio-status==1.66.2
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.2
+idna==3.8
+ipykernel==6.29.5
+ipython==8.27.0
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.4
+jiter==0.5.0
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+kiwisolver==1.4.7
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+multidict==6.1.0
+nest-asyncio==1.6.0
+numpy==2.1.1
+oauthlib==3.2.2
+openai==0.28.0
+openpyxl==3.1.5
+packaging==24.1
+pandas==2.2.2
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.4.0
+platformdirs==4.2.2
+prompt_toolkit==3.0.47
+proto-plus==1.24.0
+protobuf==5.28.2
+psutil==6.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.18.0
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+pytz==2024.1
+pyzmq==26.2.0
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
+scipy==1.14.1
+seaborn==0.13.2
+six==1.16.0
+sniffio==1.3.1
+SQLAlchemy==2.0.25
+stack-data==0.6.3
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2024.1
+uritemplate==4.1.1
+urllib3==2.2.2
+wcwidth==0.2.13
+Werkzeug==3.0.0
+WTForms==3.0.1
+yarl==1.11.1
+
